fix z-index navbar responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,7 @@ body {
   width: 100%;
   transform: translate3d(-100%, 0, 0);
   transition: 0.3s all ease-in-out;
+  z-index: 1;
 }
 .navbar-responsive:after {
   content: "";
